dark/light mode icon contrast fix

--- a/asadali-portfolio/src/styles/Home.css
+++ b/asadali-portfolio/src/styles/Home.css
@@ -108,7 +108,7 @@
   
   @media only screen and (max-width: 600px) {
     .about h2 {
-      font-size: 40px;
+      font-size: 100px;
     }
   
     .about .prompt {
